--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^7.26.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
