--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.10",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^7.26.9",
     "tslib": "^2.3.0",
